--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "home"]
 	path = home
-	url = https://github.com/fatcat2/scc-covid19
+	url = https://github.com/fatcat2/scc-covid19-frontend
